tests/paczka1/fuzzy1/42301562.err
Error in line 3: JUyY4Wkz9g2 A856 34,9
Error in line 6: JUyY4Wkz9g2 S161 53,0
Error in line 24: S540 A856 65,2
Error in line 27: JUyY4Wkz9g2 S540 14,4
